--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy~=2.3.4
-pandas~=2.3.3
-torch~=2.9.0
+torch~=2.9.1
 SQLAlchemy~=2.0.44
+requests~=2.32.5
 tqdm~=4.67.1
 nibabel~=5.3.2
-matplotlib~=3.10.7
+pandas~=2.3.3
+numpy~=2.3.5
+simpleitk~=2.5.3
+nilearn~=0.12.1
