--- a/unet/train_config.yaml
+++ b/unet/train_config.yaml
@@ -1,29 +1,47 @@
-# Sample configuration file for training a 3D U-Net on a task of predicting the boundaries in 3D stack of the Arabidopsis
-# ovules acquired with the confocal microscope. Training done with a combination of Binary Cross-Entropy and DiceLoss.
-# Download train data from: https://osf.io/x9yns/
-# Download validation data from: https://osf.io/xp5uf/
-# Download test data from: https://osf.io/8jz7e/
+# Sample configuration file for training a 3D U-Net on a multiclass semantic segmentation task.
+
+# model configuration
 model:
+  # model class, e.g. UNet3D, ResidualUNet3D
   name: UNet3D
   # number of input channels to the model
   in_channels: 1
-  # number of output channels
-  out_channels: 1
-  # determines the order of operators in a single layer (crg - Conv3d+ReLU+GroupNorm)
+  # number of classes
+  out_channels: 3
+  # determines the order of operators in a single layer (gcr - GroupNorm+Conv3d+ReLU)
   layer_order: gcr
-  # initial number of feature maps
-  f_maps: 32
+  # number of features at each level of the U-Net
+  f_maps: [ 32, 64, 128, 256 ]
   # number of groups in the groupnorm
   num_groups: 8
-  # apply element-wise nn.Sigmoid after the final 1x1x1 convolution, otherwise apply nn.Softmax
-  final_sigmoid: true
-# loss function to be used during training
+  # apply element-wise nn.Sigmoid after the final 1x1 convolution, otherwise apply nn.Softmax (in this case softmax)
+  final_sigmoid: false
+  # if True applies the final normalization layer (sigmoid or softmax), otherwise the networks returns the output from the final convolution layer; use False for regression problems, e.g. de-noising
+  is_segmentation: true
+# trainer configuration
+trainer:
+  # path to the checkpoint directory
+  checkpoint_dir: unet/checkpoints
+  # path to the latest checkpoint; if provided the training will be resumed from that checkpoint
+  resume: null
+  # path to the best_checkpoint.pytorch; to be used for fine-tuning the model with additional ground truth
+  # make sure to decrease the learning rate in the optimizer config accordingly
+  pre_trained: null
+  # how many iterations between validations
+  validate_after_iters: 1000
+  # how many iterations between tensorboard logging
+  log_after_iters: 500
+  # max number of epochs
+  max_num_epochs: 200
+  # max number of iterations
+  max_num_iterations: 60000
+  # model with higher eval score is considered better
+  eval_score_higher_is_better: True
+# loss function configuration
 loss:
-  name: BCEDiceLoss
-  # a target value that is ignored and does not contribute to the input gradient
-  ignore_index: null
-  # skip the last channel in the target (i.e. when last channel contains data not relevant for the loss)
-  skip_last_target: true
+  # use BCE loss for training
+  name: CrossEntropyLoss
+# optimizer configuration
 optimizer:
   # initial learning rate
   learning_rate: 0.0002
@@ -31,92 +49,71 @@ optimizer:
   weight_decay: 0.00001
 # evaluation metric
 eval_metric:
-  # use AdaptedRandError metric
-  name: BoundaryAdaptedRandError
-  # probability maps threshold
-  threshold: 0.4
-  # use the last target channel to compute the metric
-  use_last_target: true
-  # use only the first channel for computing the metric
-  use_first_input: true
+  # use average precision metric
+  name: MeanIoU
+# learning rate scheduler configuration
 lr_scheduler:
+  # reduce learning rate when evaluation metric plateaus
   name: ReduceLROnPlateau
-  # make sure to use the 'min' mode cause lower AdaptedRandError is better
-  mode: min
-  factor: 0.5
-  patience: 30
-trainer:
-  # skip last channel during tensorboard logging
-  tensorboard_formatter:
-    skip_last_target: true
-  # model with lower eval score is considered better
-  eval_score_higher_is_better: False
-  # path to the checkpoint directory
-  checkpoint_dir: CHECKPOINT_DIR
-  # path to latest checkpoint; if provided the training will be resumed from that checkpoint
-  resume: null
-  # path to the best_checkpoint.pytorch; to be used for fine-tuning the model with additional ground truth
-  pre_trained: null
-  # how many iterations between validations
-  validate_after_iters: 1000
-  # how many iterations between tensorboard logging
-  log_after_iters: 500
-  # max number of epochs
-  max_num_epochs: 1000
-  # max number of iterations
-  max_num_iterations: 150000
-# Configure training and validation loaders
+  # use 'max' if eval_score_higher_is_better=True, 'min' otherwise
+  mode: max
+  # factor by which learning rate will be reduced
+  factor: 0.2
+  # number of *validation runs* with no improvement after which learning rate will be reduced
+  patience: 8
+
+# data loaders configuration
 loaders:
   # dataset class, currently StandardHDF5Dataset and LazyHDF5Dataset are supported
   dataset: StandardHDF5Dataset
+  # batch dimension; if number of GPUs is N > 1, then a batch_size of N * batch_size will automatically be taken for DataParallel
+  batch_size: 1
   # how many subprocesses to use for data loading
-  num_workers: 32
+  num_workers: 8
   # path to the raw data within the H5
   raw_internal_path: raw
-  # path to  the label data within the H5
+  # path to the label data within the H5
   label_internal_path: label
   # apply random shifting and scaling of the patches; value of 20 mean that patches may shrink/stretch by 20px in each dimension
   random_scale: 20
   # random scale execution probability; since random scale is quite slow for 3D data, we set it to 0.1
   random_scale_probability: 0.1
   # compute global dataset statistics (mean, std) for Standardize transformer
-  global_normalization: true
+  global_normalization: false
   # configuration of the train loader
   train:
-    # path to the training datasets
+    # paths to the training datasets
     file_paths:
-      - PATH_TO_TRAIN_DIR
+      - unet/train
 
     # SliceBuilder configuration, i.e. how to iterate over the input volume patch-by-patch
     slice_builder:
       name: FilterSliceBuilder
       # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
-      patch_shape: [80, 170, 170]
+      patch_shape: [ 80, 170, 170 ]
       # train stride between patches
-      stride_shape: [20, 40, 40]
+      stride_shape: [ 20, 40, 40 ]
       # minimum volume of the labels in the patch
-      threshold: 0.6
+      threshold: 0.01
       # probability of accepting patches which do not fulfil the threshold criterion
       slack_acceptance: 0.01
 
     transformer:
       raw:
+        # subtract mean and divide by std dev
         - name: Standardize
+        # randomly flips the volume in one of the axis
         - name: RandomFlip
+        # randomly rotates the volume with 90 deg across a randomly chosen plane
         - name: RandomRotate90
         - name: RandomRotate
           # rotate only in ZY plane due to anisotropy
-          axes: [[2, 1]]
-          angle_spectrum: 45
+          axes: [ [ 2, 1 ] ]
+          # rotates by choosing random angle from [-30, 30] deg
+          angle_spectrum: 30
           mode: reflect
         - name: ElasticDeformation
           spline_order: 3
-        - name: GaussianBlur3D
-          execution_probability: 0.5
-        - name: AdditiveGaussianNoise
-          execution_probability: 0.2
-        - name: AdditivePoissonNoise
-          execution_probability: 0.2
         - name: ToTensor
           expand_dims: true
       label:
@@ -124,32 +121,31 @@ loaders:
         - name: RandomRotate90
         - name: RandomRotate
           # rotate only in ZY plane due to anisotropy
-          axes: [[2, 1]]
-          angle_spectrum: 45
+          axes: [ [ 2, 1 ] ]
+          angle_spectrum: 30
           mode: reflect
         - name: ElasticDeformation
           spline_order: 0
-        - name: StandardLabelToBoundary
-          # append original ground truth labels to the last channel (to be able to compute the eval metric)
-          append_label: true
+          # convert target volume to binary mask
         - name: ToTensor
           expand_dims: false
+          dtype: int64
 
   # configuration of the val loader
   val:
-    # path to the val datasets
+    # paths to the val datasets
     file_paths:
-      - PATH_TO_VAL_DIR
+      - unet/val.hdf5
 
     # SliceBuilder configuration, i.e. how to iterate over the input volume patch-by-patch
     slice_builder:
       name: FilterSliceBuilder
       # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
-      patch_shape: [80, 170, 170]
+      patch_shape: [ 80, 170, 170 ]
       # train stride between patches
-      stride_shape: [80, 170, 170]
+      stride_shape: [ 80, 170, 170 ]
       # minimum volume of the labels in the patch
-      threshold: 0.6
+      threshold: 0.01
       # probability of accepting patches which do not fulfil the threshold criterion
       slack_acceptance: 0.01
 
@@ -160,7 +156,6 @@ loaders:
         - name: ToTensor
           expand_dims: true
       label:
-        - name: StandardLabelToBoundary
-          append_label: true
         - name: ToTensor
           expand_dims: false
+          dtype: int64
